--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "del": "^3.0.0",
     "download-file": "^0.1.5",
+    "handlebars": "^4.0.12",
     "puppeteer": "^1.6.1"
   },
   "devDependencies": {},
